<resources>
    <string name="app_name">Intelligent Area Mapping</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="MapLabel">Map</string>
    <string name="title_activity_ibeacon">IBeaconActivity</string>
    <string name="withoutdata">Without data</string>
    <string name="_text_info_shared_successfully">Information was mutually shared successfully!</string>
    <string name="expositor_name_label">Exhibitor:</string>
    <string name="expositor_description_label">Description:</string>
    <string name="expositor_phone_label">Phone:</string>
    <string name="expositor_email_label">email</string>
    <string name="expositor_website_label">Website:</string>
    <string name="welcome_text">Welcome to the Expo!</string>
    <string name="action_developer_tools">Developer Tools</string>
</resources>
