<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/expositor_logo_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/iam" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expositor_info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="horizontal">

        <Space
            android:layout_width="15dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/expositor_hidden_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/expositor_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/expositor_beacon_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/expositor_bottom_scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/expositor_visible_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <Space
                    android:layout_width="1dp"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expositor_name_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/expositor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expositor_description_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/expositor_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expositor_website_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/expositor_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expositor_email_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/expositor_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expositor_phone_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/expositor_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>